--- a/main.html
+++ b/main.html
@@ -8,8 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+   <div class ="container">
+	   <div class="card">
+		   <img
+          src="https://www.gardendesign.com/pictures/images/320x240Exact/dream-team-s-portland-garden_6/dicentra-spectabilis-common-bleeding-heart-old-fashioned-bleeding-heart-shutterstock-com_12787.jpg"
+          alt="product image"
+        />
+		   <h1>Pricing card</h1>
+		   <h3>Price:Rs 200</h3>
+		   <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit</p>
+		   <button>Buy Now</button>
+	   </div>
+   </div>
+	
 
 </body>
 
